@@ -4,6 +4,9 @@ Changelog
 3.0 (unreleased)
 ----------------
 
+- Linked last breadcrumb part.
+  [phgross]
+
 - Fixed imports in the processInputs monkeypatch.
   [phgross]
 
